# emailgen

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  PERFORMANCE.md  README.md  install.ps1  install.sh  package.json  pyproject.toml
.github/workflows/: ci.yml  publish_npm.yml  publish_pypi.yml  release.yml
benches/: generation_bench.rs
data/: example_domains.txt  example_names.txt
examples/: custom_wordlist.rs  generate_1m.rs
scripts/: benchmark.sh  generate.sh  install.js
src/: bloom.rs  generator.rs  lib.rs  main.rs  wordlist.rs
