[package]
name = "mailgen"
version = "0.1.2"
edition = "2021"
authors = ["Akin <akinpasha82@gmail.com>"]
description = "High-performance email generator using Markov chains and Bloom filters"
license = "MIT"
repository = "https://github.com/akin01/emailgen"
keywords = ["email", "generator", "markov", "bloom-filter", "test-data"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[dependencies]
markovify-rs = "0.1.2"
bloomfilter = "1.0"
rand = "0.8"
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
rayon = "1.8"
tokio = { version = "1.35", features = ["full", "rt-multi-thread", "macros", "fs", "io-util"] }
tokio-stream = "0.1"
indicatif = "0.17"

[dev-dependencies]
criterion = "0.5"
tempfile = "3.9"

[[bench]]
name = "generation_bench"
harness = false

[[example]]
name = "generate_1m"
path = "examples/generate_1m.rs"

[[bin]]
name = "mailgen"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
